# pegin

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  clippy.toml  eslint.config.js  knowledge.base  llms.txt  package.json  pnpm-lock.yaml  prettier.config.js  rustfmt.toml  tsconfig.json
.cargo/: config.toml
.claudian/: claudian-settings.json
.claudian/sessions/: conv-1779321636917-p4gfno2vs.meta.json
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml
apps/demo-web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/demo-web/plugins/: pegin-auth-plugin.mjs  pegin-auth-plugin.mjs.d.ts
apps/demo-web/public/: manifest.webmanifest
apps/demo-web/scripts/: ensure-wasm.mjs  run-if-wasm.mjs
apps/demo-web/src/: main.tsx  vite-env.d.ts
apps/mini/: index.html  package.json  vite.config.ts
apps/mini/src/: main.tsx
apps/mini/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/mini/src-tauri/capabilities/: default.json
apps/mini/src-tauri/icons/: icon.icns
apps/mini/src-tauri/src/: device_key.rs  lib.rs  main.rs  passkey_bridge.rs  relay_client.rs  signing.rs
ci/: Dockerfile
crates/pegin-domain/: Cargo.toml
crates/pegin-domain/src/: did.rs  error.rs  identity.rs  jwt_claims.rs  lib.rs  session_id.rs
crates/pegin-domain/tests/: did.rs  identity.rs  jwt_claims.rs  session_id.rs
crates/pegin-identity/: Cargo.toml
crates/pegin-identity/src/: authenticator.rs  lib.rs  store.rs
crates/pegin-infrastructure/: Cargo.toml
crates/pegin-infrastructure/src/: chia_gateway.rs  lib.rs  local_profile_store.rs
crates/pegin-infrastructure/src/chia/: coinset.rs  gateway.rs  mod.rs  simulator.rs
crates/pegin-infrastructure/src/modules/: mod.rs
crates/pegin-infrastructure/src/modules/chia/: entities.rs  mod.rs  repository.rs  service.rs
crates/pegin-infrastructure/src/modules/profile/: service.rs
crates/pegin-infrastructure/src/modules/seed_vault/: entities.rs  error.rs  helper.rs  mod.rs  repository.rs  service.rs
crates/pegin-jwt/: Cargo.toml  build.rs
crates/pegin-jwt/src/: lib.rs
crates/pegin-jwt/src/modules/: mod.rs
crates/pegin-jwt/src/modules/jwt/: jwt.helper.rs  jwt.service.rs  mod.rs
crates/pegin-jwt/src/shared/: error.rs  hkdf_config.rs  mod.rs  types.rs
crates/pegin-testing/: Cargo.toml
crates/pegin-testing/src/: did_factory.rs  fixtures.rs  harness.rs  lib.rs  mock_passkey.rs  simulator.rs
crates/pegin-testing/src/modules/harness/: helper.rs  mock_passkey.rs  mod.rs
crates/pegin-testing/tests/: coinset.rs  gateway.rs  wallet_smoke.rs
crates/pegin-testing/tests/fixtures/: personas.json
crates/pegin-verify/: Cargo.toml
crates/pegin-verify/src/: lib.rs
crates/pegin-verify/src/modules/: mod.rs
crates/pegin-verify/src/modules/chain/: coinset.resolver.rs  mod.rs  resolver.rs
crates/pegin-verify/src/modules/challenge/: challenge.service.rs  mod.rs
crates/pegin-verify/src/modules/did/: did.helper.rs  did.repository.rs  did.scan.rs  mod.rs  owner.rs  resolve.rs
crates/pegin-verify/src/modules/verify/: mod.rs  verify.service.rs
crates/pegin-verify/src/shared/: error.rs  mod.rs
crates/pegin-verify/tests/: did_owner.rs
crates/pegin-verify/tests/fixtures/: testnet11_did.json
crates/pegin-wallet/: Cargo.toml
crates/pegin-wallet/src/: assert_passkey.rs  create_account.rs  lib.rs  sign_jwt.rs
crates/pegin-wasm/: .env.example  Cargo.toml  demo-cli.mjs  logger.mjs  smoke-test.mjs  test_vectors.rs  webdriver.json
crates/pegin-wasm/src/: lib.rs  test_util.rs
crates/pegin-wasm/src/modules/: mod.rs
crates/pegin-wasm/src/modules/auth/: mod.rs  service.rs
crates/pegin-wasm/src/modules/did/: helper.rs  mod.rs  peer.rs  service.rs
crates/pegin-wasm/src/modules/did_lookup/: coinset.rs  entities.rs  helper.rs  mod.rs  repository.rs  scan.rs  service.rs
crates/pegin-wasm/src/modules/jwt/: mod.rs  service.rs
crates/pegin-wasm/src/modules/keys/: entities.rs  helper.rs  mod.rs  service.rs
crates/pegin-wasm/src/modules/signing/: mod.rs  service.rs
crates/pegin-wasm/test-support/: deterministic-phrase.mjs
crates/pegin-wasm/tests/: wasm.rs
crates/pegin-wasm/tests/common/: mod.rs
docs/: README.md  Wiki Links.md  llms.txt
docs/00-getting-started/: quick-start.md  wiki-setup.md
docs/01-vision/: business-principles.md  core-value-user-owned-login.md  fully-decentralized.md  pegin-manifest.md
docs/02-product/: complete-ecosystem.md  login-with-pegin-vs-social-idp.md  permission-platform.md  user-facing-ux-principles.md
docs/03-use-cases/: differentiators.md  mvp-strategy.md  roadmap.md
docs/04-technical/: README.md  technical-hub.md
docs/04-technical/specs/: README.md  enterprise-identity-spec.md  specifications-index.md  tech-stack.md
docs/05-business/: business-plan.md  competitive-moat.md  enterprise-business-plan.md  sustainable-funding.md
docs/06-strategy/: chia-ecosystem-position.md  notbot-integration.md
docs/07-penguin-products/: gateway-business-plan.md  vault-business-plan.md
docs/08-developer/: README.md  developer-documentation.md  dig-enterprise-transformation.md  dig-incentives-integration.md  enterprise-identity-spec.md  infrastructure-and-tooling-principles.md  on-chain-architecture.md  permission-data-model.md  sdk-guide.md  tech-stack.md
docs/08-developer/architecture/: README.md  application-architecture.md  architecture-redirect.md  dig-enterprise-transformation.md  dig-incentives-integration.md  (+1 more)
docs/09-how-we-work/: README.md  collaboration-tooling.md  developer-tooling-and-setup.md  how-we-work.md  team-how-we-work.md
docs/10-architecture/: README.md  application-architecture.md  architecture-overview.md  cross-device-login-and-vault-recovery.md  decentralized-verification-no-central-op.md  dig-as-application-layer.md  identity-username-and-account-flow.md  mini-wallet-and-recovery-vault.md  on-chain-architecture.md  recovery-vault-and-guardians.md
docs/ai/: CONTEXT.md  USAGE.md  chunks.jsonl  manifest.json
docs/wiki/: PEGIN_Wiki.md  README.md
scripts/: dev.mjs
(+86 files in other folders)
