[workspace]
resolver = "2"
members = [
    "crates/pegin-domain",
    "crates/pegin-identity",
    "crates/pegin-wallet",
    "crates/pegin-infrastructure",
    "crates/pegin-testing",
    "crates/pegin-jwt",
    "crates/pegin-verify",
    "crates/pegin-wasm",
]

# ── Workspace-wide lint configuration ────────────────────────────────────────
# Each crate opts in with `[lints] workspace = true` in its own Cargo.toml.
# Ref: docs/pegin-wiki/08-developer/engineering/linting-and-formatting.md

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
# Enable the full pedantic group at warn level (priority = -1 so individual
pedantic = { level = "warn", priority = -1 }

# ── Pedantic suppressions — revisit when crates have real implementations ─────
must_use_candidate = "allow"
missing_errors_doc = "allow"

# ── Safety lints ──────────────────────────────────────────────────────────────
unwrap_used = "deny"
expect_used = "warn"

[workspace.dependencies]
# ── Chia Blockchain (xch-dev + Chia-Network) ─────────────────────────────────
chia-wallet-sdk = "0.23"
chia-protocol    = { version = "0.25", features = ["serde"] }
chia-bls         = "0.25"
chia-traits      = "0.25"
chia-puzzles     = "0.20"
chia-puzzle-types = "0.25"
clvm-traits      = "0.25"
clvm-utils       = "0.25"
chia-sdk-test    = "0.26"

# ── Backend framework (Loco) ──────────────────────────────────────────────────
loco-rs = { version = "0.16", features = ["with-db"] }
axum    = "0.7"

# ── Database (PostgreSQL) ─────────────────────────────────────────────────────
sea-orm           = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-postgres"] }
sqlx              = { version = "0.8",  features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "macros"] }

# ── Authentication ────────────────────────────────────────────────────────────
passkey        = "0.3"
openidconnect  = "4.0"
oauth2         = "5.0"
samael         = "0.0.17"
jsonwebtoken   = "9.3"

# ── Crypto ───────────────────────────────────────────────────────────────────
sha2              = "0.10"
chacha20poly1305  = "0.10"
rand              = "0.8"
hkdf              = "0.12"
k256              = { version = "0.13", features = ["ecdsa"] }
getrandom         = "0.2"

# ── Async runtime ─────────────────────────────────────────────────────────────
tokio = { version = "1.40", features = ["full"] }

# ── Serialization ─────────────────────────────────────────────────────────────
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest    = { version = "0.12", features = ["json"] }
hex         = "0.4"
hex-literal = "0.4"
quick-xml  = "0.37"
uuid       = { version = "1.11", features = ["v4", "serde"] }
chrono     = { version = "0.4",  features = ["serde"] }
thiserror  = "2"
dotenvy    = "0.15"

# ── Storage ───────────────────────────────────────────────────────────────────
rocksdb = "0.22"

# ── WASM bridge (pegin-wasm crate only) ──────────────────────────────────────
wasm-bindgen          = "0.2"
wasm-bindgen-futures  = "0.4"
wasm-bindgen-test     = "0.3"
js-sys                = "0.3"
web-sys               = "0.3"
gloo-net              = { version = "0.6", features = ["http"] }
gloo-timers           = { version = "0.3", features = ["futures"] }
futures-util          = { version = "0.3", default-features = false, features = ["std"] }
bip39                 = "2.0"
base64                = "0.22"
bech32                = "0.11"
zeroize               = "1.8"

# ── Workspace-internal crates ─────────────────────────────────────────────────
pegin-domain         = { path = "crates/pegin-domain" }
pegin-jwt            = { path = "crates/pegin-jwt" }
pegin-verify         = { path = "crates/pegin-verify" }
pegin-identity       = { path = "crates/pegin-identity" }
pegin-wallet         = { path = "crates/pegin-wallet" }
pegin-infrastructure = { path = "crates/pegin-infrastructure" }
pegin-testing        = { path = "crates/pegin-testing" }
