[package]
name    = "pegin-infrastructure"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
pegin-domain    = { workspace = true }
pegin-identity  = { workspace = true }
chia-wallet-sdk = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
tokio           = { workspace = true }
