[package]
name    = "pegin-infrastructure"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[features]
test-utils = ["dep:chia-sdk-test"]

[dependencies]
pegin-domain  = { workspace = true }
pegin-identity = { workspace = true }
chia-protocol  = { workspace = true }
reqwest        = { workspace = true }
hex            = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
tokio          = { workspace = true }
thiserror      = { workspace = true }
argon2         = { workspace = true }
bip39          = { workspace = true }
chacha20poly1305 = { workspace = true }
aes-gcm          = "0.10"
base64           = { workspace = true }
rand             = { workspace = true }
chia-sdk-test  = { workspace = true, optional = true }
