[package]
name    = "pegin-jwt"
version = "0.1.0"
edition = "2021"
build   = "build.rs"

[lints]
workspace = true

[dependencies]
chia-bls   = { workspace = true }
k256       = { workspace = true }
hkdf       = { workspace = true }
sha2       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
base64     = { workspace = true }
hex        = { workspace = true }
