[package]
name    = "pegin-testing"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
pegin-domain    = { workspace = true }
pegin-identity  = { workspace = true }
chia-sdk-test   = { workspace = true }
chia-protocol   = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }

[dev-dependencies]
chia-wallet-sdk.workspace = true
