[package]
name    = "pegin-wasm"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chia-bls             = { workspace = true }
chia-protocol        = { workspace = true }
chia-traits          = { workspace = true }
wasm-bindgen         = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys               = { workspace = true }
gloo-net             = { workspace = true }
bip39                = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
hex                  = { workspace = true }
base64               = { workspace = true }
bech32               = { workspace = true }

# tokio is deliberately absent: it (via mio) does not compile on
# wasm32-unknown-unknown, and `wasm-pack test` builds dev-dependencies too.
[dev-dependencies]
wasm-bindgen-test = { workspace = true }

# Not used directly: enables the "js" feature on the getrandom 0.2 that chia
# deps pull in transitively, so it can reach browser crypto on wasm32-unknown-unknown.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
