[package]
name    = "pegin-wasm"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pegin-jwt            = { workspace = true }
chia-bls             = { workspace = true }
chia-protocol        = { workspace = true }
chia-puzzles         = { workspace = true }
chia-puzzle-types    = { workspace = true }
chia-traits          = { workspace = true }
wasm-bindgen         = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys               = { workspace = true }
bip39                = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
hex                  = { workspace = true }
base64               = { workspace = true }
bech32               = { workspace = true }
zeroize              = { workspace = true }

# tokio is deliberately absent from [dependencies]: it (via mio) does not compile on
# wasm32-unknown-unknown, and `wasm-pack test` builds dev-dependencies too.
[dev-dependencies]
wasm-bindgen-test = { workspace = true }
bip39             = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

# Browser-only deps: public coinset reads (gloo-net), scan timeout (gloo-timers),
# local profile cache (web-sys localStorage), and wasm RNG. The mini wallet reads
# public chain data directly; only public puzzle hashes leave the browser — never keys.
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net     = { workspace = true }
gloo-timers  = { workspace = true }
futures-util = { workspace = true }
web-sys      = { workspace = true, features = ["Window", "Storage"] }
getrandom    = { version = "0.2", features = ["js"] }
